samples/_failures_safe/1761658359_0d5714_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_03823ecb.c: In function ‘main’:
./samples/SAFE/__tmp_03823ecb.c:181:9: error: expected expression at end of input
  181 |         buffer[len -
      |         ^~~~~~
./samples/SAFE/__tmp_03823ecb.c:181:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_03823ecb.c:181:9: error: expected declaration or statement at end of input
